add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Hello, I'm Amanda Briones.</h1>
         <h2>Get to know me as a Software Engineer student.</h2>
+        <h3>Why I want to help people.</h3>
+        <p></p>
     </body>
 </html>
